--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -11,7 +11,7 @@ backports.functools-lru-cache==1.6.1
 backports.shutil-get-terminal-size==1.0.0
 bdist-mpkg==0.5.0
 beautifulsoup4==4.9.1
-bonjour-py==0.3
+# bonjour-py==0.3
 bs4==0.0.1
 certifi==2020.4.5.1
 cffi==1.12.2
